5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1836_1280.log
== SUBMITION (2019-07-01 19:15:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33
	   k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.69041
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 16
    if a[k, j]==33
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:16:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33:
	   k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.509516
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 22
    if a[k,j]==33
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:18:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33:
		k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.643507
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 22
    if a[k,j]==33
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:18:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33:
		k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moedas)
print("life: ", life)
-- EXECUTION TIME:
0.748635
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 22
    if a[k,j]==33
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:18:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33:
		k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moedas)
print("life: ", life)
-- EXECUTION TIME:
0.664519
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 22
    if a[k,j]==33
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:33:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33:
		k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moedas)
print("life: ", life)
-- EXECUTION TIME:
0.688176
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 22
    if a[k,j]==33
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:38:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input()))
b = str(input()).lower()

k = 0
j = 0
life = 100
moedas = 0

for i in range(len(b)):
	if b[i] == 'w':
		k-=1
	if k<0:
		k=0
	if a[k, j]==33:
		k+=1
	elif b[i]=='s':
		k+=1
	if k>=shape(a)[0]:
		k-=1
	if a[k,j]==33
	   k-=1
	elif b[i]=='a':
		j-=1
	if j<0:
		j=0
	if a[k,j]==33:
		j+=1
	elif b[i]=='d':
		j+=1
	if j>=shape(a)[1]:
		j-=1
	if a[k,j]==33:
		j-=1
	if a[k,j]==11:
		moedas+=1
	   a[k,j]=0
	elif a[k,j]==22:
		life-=5
print("posicao x: ", j)
print("posicao y: ", k)
print("moedas: ", moedas)
print("life: ", life)
-- EXECUTION TIME:
0.778663
-- ERROR:
  File "/home/codebench/codes/1836/1280/main.py", line 22
    if a[k,j]==33
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
